@@ -1,28 +1,0 @@
-﻿using Terraria;
-using Terraria.ModLoader;
- 
-using Roguelike.Texture;
-using Roguelike.Common.Global;
-using Roguelike.Common.Utils;
-
-namespace Roguelike.Contents.BuffAndDebuff
-{
-	public class Furious : ModBuff {
-		public override string Texture => ModTexture.EMPTYBUFF;
-		public override void SetStaticDefaults() {
-			Main.debuff[Type] = true; //Add this so the nurse doesn't remove the buff when healing
-			Main.buffNoSave[Type] = true;
-		}
-
-		public override void Update(Player player, ref int buffIndex) {
-			PlayerStatsHandle modplayer = player.GetModPlayer<PlayerStatsHandle>();
-			modplayer.AddStatsToPlayer(PlayerStats.Defense, -.5f);
-			modplayer.AddStatsToPlayer(PlayerStats.RegenHP, -.25f);
-			modplayer.AddStatsToPlayer(PlayerStats.PureDamage, 1.25f);
-			modplayer.AddStatsToPlayer(PlayerStats.CritChance, Base: 25);
-			if (player.buffTime[buffIndex] == 0) {
-				player.AddBuff(ModContent.BuffType<FuriousCoolDown>(), 420);
-			}
-		}
-	}
-}
