@@ -1,17 +1,0 @@
-﻿using Terraria;
-using Terraria.ModLoader;
-using Roguelike.Texture;
-
-namespace Roguelike.Contents.BuffAndDebuff
-{
-	public class FuriousCoolDown : ModBuff {
-		public override string Texture => ModTexture.EMPTYBUFF;
-		public override void SetStaticDefaults() {
-			Main.debuff[Type] = false; //Add this so the nurse doesn't remove the buff when healing
-			Main.buffNoSave[Type] = true;
-		}
-
-		public override void Update(Player player, ref int buffIndex) {
-		}
-	}
-}
