@@ -4,29 +4,29 @@ using Terraria.ID;
 using System.Linq;
 using ReLogic.Graphics;
 using Terraria.UI.Chat;
+using Roguelike.Texture;
 using Terraria.ModLoader;
 using Terraria.GameContent;
 using Terraria.Localization;
+using Roguelike.Common.Utils;
 using Terraria.DataStructures;
 using Microsoft.Xna.Framework;
 using Terraria.GameContent.UI;
+using Roguelike.Contents.NPCs;
+using Roguelike.Common.Global;
+using Roguelike.Contents.Perks;
+using Roguelike.Common.Systems;
 using System.Collections.Generic;
+using Roguelike.Common.ChallengeMode;
+using Roguelike.Contents.Items.Chest;
 using System.Collections.ObjectModel;
 using Microsoft.Xna.Framework.Graphics;
-using Roguelike.Common.Systems;
-using Roguelike.Contents.Perks;
-using Roguelike.Contents.Transfixion.WeaponEnchantment;
-using Roguelike.Contents.NPCs;
-using Roguelike.Contents.Items.Chest;
-using Roguelike.Contents.Items.Weapon.RangeSynergyWeapon.Annihiliation;
-using Roguelike.Contents.BuffAndDebuff.PlayerDebuff;
-using Roguelike.Contents.Transfixion.Arguments;
-using Roguelike.Texture;
 using Roguelike.Common.Systems.IOhandle;
+using Roguelike.Contents.Transfixion.Arguments;
 using Roguelike.Common.RoguelikeChange.Prefixes;
-using Roguelike.Common.Global;
-using Roguelike.Common.Utils;
-using Roguelike.Common.ChallengeMode;
+using Roguelike.Contents.BuffAndDebuff.PlayerDebuff;
+using Roguelike.Contents.Transfixion.WeaponEnchantment;
+using Roguelike.Contents.Items.Weapon.RangeSynergyWeapon.Annihiliation;
 
 namespace Roguelike.Contents.Items.Weapon {
 	public struct SynergyBonus {
