@@ -1,15 +1,15 @@
-﻿using System.Collections.Generic;
-using Terraria;
-using Terraria.ModLoader;
-using Roguelike.Contents.Transfixion.WeaponEnchantment;
-using Roguelike.Common.Systems.ArtifactSystem;
-using Roguelike.Contents.Items.RelicItem;
-using Roguelike.Contents.Perks;
-using Roguelike.Common.Systems.SpoilSystem;
-using Roguelike.Contents.Transfixion.Arguments;
-using Roguelike.Contents.Skill;
+﻿using Terraria;
 using Roguelike.Texture;
+using Terraria.ModLoader;
 using Roguelike.Common.Utils;
+using Roguelike.Contents.Skill;
+using Roguelike.Contents.Perks;
+using System.Collections.Generic;
+using Roguelike.Contents.Items.RelicItem;
+using Roguelike.Common.Systems.SpoilSystem;
+using Roguelike.Common.Systems.ArtifactSystem;
+using Roguelike.Contents.Transfixion.Arguments;
+using Roguelike.Contents.Transfixion.WeaponEnchantment;
 
 namespace Roguelike.Contents.Items.aDebugItem.StatsInform;
 internal class ContentTracker : ModItem {
